<resources>
    <string name="app_name">QuickReels</string>
    <string name="home">Home</string>
    <string name="post">Post</string>
    <string name="chat">Chat</string>
    <string name="account">Account</string>
    <string name="replies">Replies</string>
    <string name="reply">Reply</string>
    <string name="comment">Comment</string>
    <string name="comments">Comments</string>
    <string name="no_comments">No comment</string>
    <string name="send">Send</string>
    <string name="load_more">Load more</string>
    <string name="close">Close</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="storage_permission_rationale">This app needs permission to access photos and videos on your device.\n\nOpen Settings app and grant this permission.</string>
    <string name="show_more">Show more</string>
    <string name="edit">Edit caption</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_this_post">Are you sure you want to delete this post?</string>
    <string name="please_enter_a_reply">Please enter a reply</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_you_want_to_delete_this_comment">Are you sure you want to delete this comment?</string>
    <string name="confirm">Confirm</string>
    <string name="deleted">Deleted!</string>
    <string name="failed_to_delete_try_again">Failed to delete, try again</string>
    <string name="add_a_comment">Add a comment...</string>
    <string name="failed_to_add_comment_try_again">Failed to add comment, try again</string>
    <string name="failed_to_send_try_again">Failed to send, try again</string>
    <string name="done">Done</string>
</resources>