...
	Column {
		ProgressBar(uiState.isLoading)
		OutlinedTextField(
			modifier = Modifier
				.fillMaxWidth()
				.padding(PLACEHOLDER_8DP)
				.testTag("searchInputField"),
			value = searchText,
			onValueChange = { searchText = it },
			placeholder = { Text(stringResource(id = R.string.search)) },
			trailingIcon = {
				CancelSearchIcon(searchText.isNotEmpty()) {
					searchText = ""
...
